--- a/.detoxrc.json
+++ b/.detoxrc.json
@@ -1,6 +1,6 @@
 {
   "testRunner": "jest",
-  "runnerConfig": "e2e/config.json",
+  "runnerConfig": "__tests__/e2e/config.json",
   "skipLegacyWorkersInjection": true,
   "apps": {
     "android": {
