--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-test-renderer": "17.0.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "modulePathIgnorePatterns": ["__tests__/e2e/"]
   }
 }
